<resources>
    <string name="app_name" translatable="false">Hopesoninter</string>

    <string name="text_logo_content_desc">Text logo of hopeson inter</string>
    <string name="next">next</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="login">Login</string>
    <string name="tap_to_enter">tap to enter</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="or_login_with_your_email">Or login with your email</string>
    <string name="or_register_with_your_email">or register with your email</string>
    <string name="whats_your_name">Whats your name</string>
    <string name="create_password">Create password</string>
    <string name="register">Register</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_create_password">Please create password</string>
    <string name="password_should_be_greater_than_6_characters">Please password has to be greater than 6 characters</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="attend_a_meeting">Attend a meeting</string>
    <string name="leader_s_dashboard">Leader\'s dashboard</string>
    <string name="create_a_meeting">Create a meeting</string>
    <string name="admin_s_dashboard">Admin\'s dashboard</string>
    <string name="search_posts">search posts</string>
    <string name="refresh">Refresh</string>
    <string name="help_amp_feedback"><![CDATA[Help & feedback]]></string>
    <string name="my_account">My Account</string>
    <string name="logout">Logout</string>
    <string name="search_events">search events</string>
    <string name="events_n_webnars">Events and webnars</string>
    <string name="activities_around_communities">Activities around communities</string>
    <string name="upcoming_webinars_n_events">Upcoming webinars and events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_chats">search chats</string>
    <string name="enter_mobile">Please enter your mobile number</string>
    <string name="select_community">\"Select community:- \"</string>
    <string name="enter_community_name">Please enter name</string>
    <string name="enter_community_location">Please enter location</string>
</resources>