<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home" />
        <item
            android:id="@+id/chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/calendar"
            android:title="@string/calendar" />
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/my_account"
            android:title="@string/my_account"/>

        <item
            android:id="@+id/admins_dashboard"
            android:title="@string/admin_s_dashboard"/>
        
        <item
            android:id="@+id/create_meeting"
            android:title="@string/create_a_meeting"/>

        <item
            android:id="@+id/attend_meeting"
            android:title="@string/attend_a_meeting"/>
    </group>

    <group android:id="@+id/grp3">
        <item
            android:id="@+id/settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/logout"
            android:title="@string/logout"/>
    </group>

</menu>