<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.main.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                style="@style/TextInputCardView"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/menu_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:src="@drawable/ic_menu" />

                    <EditText
                        style="@style/TextInputEditText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:hint="@string/search_posts"
                        android:inputType="textPersonName"
                        android:textCursorDrawable="@null"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <View
                            android:id="@+id/context_menu_ref_view"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="false"
                            android:layout_centerHorizontal="false"
                            android:layout_centerVertical="false" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/context_menu_circle_image_view"
                            android:layout_width="35dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/profile" />
                    </RelativeLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/events_n_webnars"
                    android:textSize="21sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/webnar_events_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/activities_around_communities"
                    android:textSize="21sp" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:indeterminateTint="#B3E5FC" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/posts_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>